avoid scrolling/zooming on mobile

--- a/style.css
+++ b/style.css
@@ -699,15 +699,15 @@ li {
         background-color: var(--bg-color);
         color: var(--orange);
     }
+    .nav-wrapper {
+        width: 75px;
+    }
     .menu {
         height: 100%;
         background-color: var(--bg-color);
     }
     .menu-wrapper {
-        padding:    calc(16vw + 1rem)
-                    calc(2vw + 1rem)
-                    calc(16vw + 1rem)
-                    calc(2vw + 1rem);
+        justify-content: space-evenly;
     }
     .disegno, 
     .disegno02 {
